--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'kodilla_course'
 include 'kodilla-testing'
 include 'kodilla-testing'
+include 'kodilla-stream'
+include 'kodilla-stream'
+include 'kodilla-stream'
 
